# sim800c

./: .gitignore  LICENSE  README.md  build_and_upload.txt  requirements.txt  setup.cfg
sim800c/: __init__.py  config.py  exceptions.py  sim800c.py  sms.py  tcpip.py
sim800c/sim800c.egg-info/: PKG-INFO  SOURCES.txt
