[metadata]
# replace with your username:
name = sim800c
version = 0.0.1
author = nicholac
author_email = 
description = Controller for GPRS SIMCOM 800C GSM/GPRS Hat
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nicholac/sim800
project_urls =
    Bug Tracker = https://github.com/nicholac/sim800/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = sim800c
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src